Added alert bar. Updated contact details.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta name="description" content="Multifunctional designer and web developer based in Roanoke, Virginia &mdash; creating worldwide.">
+		<meta name="description" content="Multifunctional designer and web developer based on the East Coast &mdash; creating worldwide.">
 		<meta name="theme-color" content="#DFDFDF">
 		<title>Ruth Reyer</title>
 		<link href="main.css" rel="stylesheet" media="all">
@@ -12,12 +12,14 @@
 	</head>
 	<body>
 		<header>
+			<div class="bg-gray3 p-h-xs p-v-xs"><p class=" t-center white">Now booking projects for 2019 + available for contract work. Reach out at hello[at]ruthreyer.com.</p></div>
+			
 			<div class="headerContainer m-h-a m-v-lg--desktop">
 				<div class="m-h-md m-t-md">
 					<h1 class="f-serif t-trk f-md t-center gray4 m-b-xs">Ruth Reyer</h1>
 				</div>
 				<div class="t-center m-h-md m-b-sm">
-					<p>Multifunctional designer/developer based in Roanoke, Virginia &mdash; creating worldwide.</p>
+					<p>Multifunctional designer/developer based on the East Coast &mdash; creating worldwide.</p>
 				</div>
 				<div class="line m-h-md m-b-md"></div>
 			</div>
@@ -92,13 +94,13 @@
 
 		<div class="t-center m-h-md m-v-md">
 			<div class="m-b-sm">
-				<h2 class="m-b-xs">New Clients</h2>
-				<p>Now booking projects for 2019</p>
+				<h2 class="m-b-xs">Availability</h2>
+				<p>Now booking projects and contract work.</p>
 			</div>
 			<div class="m-b-sm">
 				<h2 class="m-b-xs">Contact</h2>
-				<div class="m-b-xs">ruthreyer[at]tutamail.com</div>
-				<div>540-556-3931</div>
+				<div class="m-b-xs">hello[at]ruthreyer.com</div>
+				<div></div>
 			</div>
 			
 		</div>
