--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Multifunctional designer and web developer based on the East Coast &mdash; creating worldwide.">
 		<meta name="theme-color" content="#DFDFDF">
 		<title>Ruth Reyer</title>
@@ -53,7 +53,7 @@
 				<h2 class="m-b-xs">Noteworthy</h2>
 				<p>Cofounder of <a href="https://www.mutthub.org" target="_blank" name="MuttHub" rel="noopener">MuttHub</a>, an organization that helps local shelter dogs find their forever homes.</p>
 				<br>
-				<p>Gained national attention with featured work in <a href="https://www.bloomberg.com/news/articles/2016-09-14/with-wells-fargo-scandal-there-s-blood-in-the-water-here-s-who-profits" target="_blank" name="Bloomberg" rel="noopener">Bloomberg</a>.</p>
+				<p>Gained national attention with <a href="https://dribbble.com/shots/3345348-Bad-Ben-ADDY-2017" target="_blank" name="Dribbble shot" rel="noopener">featured work</a> in <a href="https://www.bloomberg.com/news/articles/2016-09-14/with-wells-fargo-scandal-there-s-blood-in-the-water-here-s-who-profits" target="_blank" name="Bloomberg" rel="noopener">Bloomberg</a>.</p>
 				<br>
 				<p>Has earned a reputation for developing successful brand growth through strategic planning and targeting, strong visual design, and intentional experiences.</p>
 			</div>
