Added instagram icon

--- a/src/index.html
+++ b/src/index.html
@@ -111,6 +111,7 @@
 			<a href="https://www.twitter.com/ruthmichaellla" target="_blank" name="Twitter" rel="noopener"><img src="img/twitter.svg" class="p-r-xs" alt="twitter logo"></a>
 			<a href="https://www.unsplash.com/ruthreyer" target="_blank" name="Unsplash" rel="noopener"><img src="img/unsplash.svg" class="p-r-xs" alt="Unsplash logo"></a>
 			<a href="https://www.dev.to/ruthreyer" target="_blank" name="Dev" rel="noopener"><img src="img/dev.svg" class="p-r-xs" alt="Dev logo"></a>
+			<a href="https://www.instagram.com/ruthreyer_design" target="_blank" name="Instagram" rel="noopener"><img src="img/insta.svg" class="p-r-xs" alt="Instagram logo"></a>
 		</div>
 		<footer class="t-center m-h-md m-v-md f-sm">
 			<p>&#169; 2018 Ruth Reyer Design &amp; Development</p>
